k8s/namespace.yaml
# k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: game-app
