k8s/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: game-app
spec:
  serviceName: mongo
  replicas: 3
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:6
        ports:
        - containerPort: 27017
        command:
          - mongod
          - "--replSet"
          - "rs0"
          - "--bind_ip_all"
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
        - name: mongo-config-volume
          mountPath: /etc/mongo
      volumes:
      - name: mongo-config-volume
        configMap:
          name: mongo-config
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
